k8s-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skill-radar-dev
  namespace: public-webapp-dev
  labels:
    app: skill-radar-dev
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: skill-radar-dev
